CKAD/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: ClusterIP # NodePort | LoadBalancer | default: ClusterIP
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webapp
  name: webapp-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 30082 # Add nodePort here
  selector:
    app: webapp
  type: NodePort
